--- a/复健.md
+++ b/复健.md
@@ -59,7 +59,7 @@ p.interactive()
 
 ## 2.[GKCTF 2021]checkin
 
-![image-20211031140551303](https://abc.p0lar1s.com/202110311405394.png)
+![image-20211031140551303](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041803538.png)
 
 64位下的栈迁移。小小签到题，trick真不少。
 
@@ -100,7 +100,7 @@ int sub_4018C7()
 
 而64位的问题在于漏洞函数sub_4018C7的栈空间**只给溢出到rbp**，我们不能修改返回地址，那第二个leave;ret；在哪里呢？
 
-![image-20211031141548081](https://abc.p0lar1s.com/202110311415113.png)
+![image-20211031141548081](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041803075.png)
 
 其实出题人已经给我们了，如上图，sub_4018C7使用leave；ret；来结束函数，后面紧跟着的是调用它的函数sub_401876的leave；ret；
 
@@ -108,7 +108,7 @@ int sub_4018C7()
 
 **构造bss上的ROP链时还要注意两点，第一，puts函数的地址不能是puts_plt_addr**，而应该是
 
-![image-20211031143702518](https://abc.p0lar1s.com/202110311437549.png)
+![image-20211031143702518](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041803017.png)
 
 call_puts_addr = 0x4018B5，这样才能保证第一次ROP泄露出puts真实地址和libc基地址后，能够再次进入漏洞函数，从而再次利用漏洞来getshell
 
@@ -126,11 +126,11 @@ payload2 = b'admin\x00\x00\x00' + b'\x00' * 24 + p64(bss_name_addr)
 
 如下图，迁移后，再次进入漏洞函数：
 
-![image-20211031150830975](https://abc.p0lar1s.com/202110311508016.png)
+![image-20211031150830975](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041803807.png)
 
 再次读取用户名到bss段上，0x602400处：
 
-![image-20211031151018929](https://abc.p0lar1s.com/202110311510976.png)
+![image-20211031151018929](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041803429.png)
 
 故payload3：
 
@@ -140,7 +140,7 @@ payload3 = b'admin\x00\x00\x00' + p64(pop_rdi_ret) + p64(bin_sh_addr) + p64(syst
 
 再次读取登录密码到栈上（这个栈已经迁移到bss段上了）：
 
-![image-20211031151134574](https://abc.p0lar1s.com/202110311511618.png)
+![image-20211031151134574](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041803190.png)
 
 这就引出了要注意的第二点：**第二，读取的密码放到0x6023f0，此时若payload4和payload2一样，会覆盖我们输入的用户名admin！**
 
@@ -164,7 +164,7 @@ payload4 = b'admin\x00\x00\x00' * 3 + p64(one_gadget) + p64(bss_name_addr)
 
 exp如下：
 
-```
+```python
 from pwn import *
 context(arch='amd64', os='linux', log_level='debug')
 #p = process("./1")
