--- a/多线程安全机制的研究和应用.md
+++ b/多线程安全机制的研究和应用.md
@@ -40,7 +40,7 @@ Long Xudong
 
 一个进程至少需要一个线程作为它的指令执行体，进程管理着资源比如CPU、内存、文件等等。进程之间空间、时间独立互不干扰。同一进程的多线程间共享其地址空间，可并发执行，且彼此间可能存在着种种联系，或许是共享一段缓存或协调执行一组任务。线程和进程的不同之处如图1所示。
 
-![img](https://abc.p0lar1s.com/202111271400054.gif)
+![img](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041801693.gif)
 
 图1 进程和线程的比较
 
@@ -92,7 +92,7 @@ Long Xudong
 
 可以考虑使用锁变量来实现多个线程的互斥访问。锁变量为0表示当前没有线程位于临界区当中。对于想要进入临界区的线程，其首先检查当前锁变量的值，如果为0，则更新当前锁变量值为非0值并进入临界区，在退出临界区前，将锁变量重新置为0。其伪代码如下：
 
-```
+```c
 //非临界区代码
 
 ……
@@ -128,7 +128,7 @@ WHILE(*lock* != 0){
 
 对于线程0
 
-```
+```c
 WHILE(*true*)｛
 
     //执行非临界区代码
@@ -154,7 +154,7 @@ WHILE(*true*)｛
 
 对于线程1
 
-```
+```c
 WHILE(*true*){
 
     //执行非临界区代码
@@ -190,31 +190,33 @@ Peterson算法简洁易懂，对于包含多个线程的互斥算法，有两种
 
 第一种实现方式：
 
+```c
 do{
 
-​    flag[i] = TRUE;
+    flag[i] = TRUE;
 
-​    turn = j;
+    turn = j;
 
-​    while(flag[j] && turn == j);
+    while(flag[j] && turn == j);
 
-​    //执行临界区代码
+    //执行临界区代码
 
    ……
 
-​    flag[i] = FALSE;
+    flag[i] = FALSE;
 
-​    //执行非临界区代码
+    //执行非临界区代码
 
-​    ……
+    ……
 
 } while(TRUE);
+```
 
 不难理解这其实是一种“谦让”的算法。线程i在进入之前，先看看其他线程有无进入临界区的想法。如果有，则等待其他线程执行完临界区的代码后，自己再进入。
 
 第二种实现方式主要包含两个方法，在线程准备进入临界区前，调用enter_region方法，则线程执行完临界区代码后，准备退出前，调用leave_region方法。
 
-```
+```c
 int[] interested = new int[N]
 
 int turn; //记录当前有临界区执行权限的线程编号
@@ -264,7 +266,7 @@ void leave_region(int process){
 
 现在来看需要硬件支持的一种方案。某些计算机中，特别是那些设计为多处理器的计算机，都有下面一条指令
 
-```
+```assembly
 TSL RX,LOCK
 ```
 
@@ -278,7 +280,7 @@ TSL RX,LOCK
 
 这条指令如何防止两个线程同时进入临界区呢？解决方案如下图所示。假定（但很典型）存在如下共4条指令的汇编语言子程序。第一条指令将lock原来的值复制到寄存器中并将lock设置为1，随后这个原来的值与0相比较。如果它非零，则说明以前已被加锁，则程序将回到开始并再次测试。经过或长或短的一段时间后，该值将变为0（当前处于临界区中的线程退出临界区时），于是过程返回，此时已加锁。要清除这个锁非常简单，程序只需将0存入lock即可，不需要特殊的同步指令。
 
-![img](https://abc.p0lar1s.com/202111271400058.gif)
+![img](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041802798.gif)
 
 ​																														        		图2
 
@@ -286,7 +288,7 @@ TSL RX,LOCK
 
 一个可替代TSL的指令是XCHG，它原子性地交换了两个位置的内容，例如，一个寄存器与一个存储器字。代码下图所示，而且就像可以看到的那样，它本质上与TSL的解决办法一样。所有的Intel x86 CPU在低层同步中使用XCHG指令。
 
-![img](https://abc.p0lar1s.com/202111271400060.gif)
+![img](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041802749.gif)
 
 ​                                                                                                                                        图3
 
@@ -298,13 +300,13 @@ TSL RX,LOCK
 
 例如，对于一个绘图软件，并发启动了三条线程分别从键盘、终端和鼠标获得信号和输入，并将结果输出到屏幕上，其原本的多线程工作模式如图4，多个线程同时接收输入信号，进行相应检测，并向输出设备并发写数据。这使多个线程竞争显示设备。
 
-![img](https://abc.p0lar1s.com/202111271400065.gif)
+![img](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041802328.gif)
 
 ​																										图4 多线程在绘图软件中的应用实例
 
 对于利用上述方法进行修改，将要访问共享资源的部分分配到单独的线程中，三个线程利用管道将数据发送到单独的线程，三个线程访问管道时使用同步机制以防止竞争。图5是改进后的流程图。
 
-![img](https://abc.p0lar1s.com/202111271400068.gif)
+![img](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041802046.gif)
 
 ​																											图5 采用安全机制的多线程示例
 
@@ -316,7 +318,7 @@ TSL RX,LOCK
 
 例1：
 
-```
+```c
 fputs(const char* s, FILE* stream){
 
    char* p;
@@ -332,7 +334,7 @@ fputs(const char* s, FILE* stream){
 
 例2：
 
-```
+```c
 mutex_tm[NFILE];
 
 fputs(const char* s, FILE* stream){
