--- a/推荐系统概述.md
+++ b/推荐系统概述.md
@@ -10,12 +10,12 @@ Data(数据)->Features(特征)->ML Algorithm(机器学习算法)->Prediction Out
 
 -   数据来源
 
-    前端“埋点”——JS代码，比如点击某一个按钮，调用相应的接口，把当前的时间，用户的id还有当前的行为及对应的位置（在哪个页面发生的行为）交给后端，后端记下来
+    **前端“埋点”——JS代码**，比如点击某一个按钮，调用相应的接口，把当前的时间，用户的id还有当前的行为及对应的位置（在哪个页面发生的行为）交给后端，后端记下来
 
-    -   显性数据
+    -   显性数据（显性评分：直接评价的数据）
         -   Rating 打分：好还是不好，直接反映
         -   Comments 评论/评价
-    -   隐形数据
+    -   隐形数据（大多数时候没有直接评价的数据）
         -    Order history 历史订单
         -    Cart events 加购物车，感兴趣
         -    Page views 页面浏览——把东西展示给用户，他没看，说明不感兴趣
@@ -52,23 +52,25 @@ Data(数据)->Features(特征)->ML Algorithm(机器学习算法)->Prediction Out
 
 2.产生推荐结果
 
-
-
 ![img](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041808576.png)
 
 ### 推荐模型构建流程之总结：四个步骤
 
-**1.数据收集：显性评分+隐性数据**
+**1.数据收集：**
+
+分成显性评分和隐形数据，显性评分+隐性数据
 
 **2.特征工程：**
 
-**协同过滤：要创建用户-物品的评分矩阵**
+如果是协同过滤，要创建用户-物品的评分矩阵
 
-**基于内容：基于文本描述，（中文）分词、tf-idf、词向量（word2vec）**
+如果是基于内容，即基于文本描述（比如iPhone 13土豪金256G和iPhone max是一样的东西或类似的东西吗）
+
+怎么判断相似？要用到（中文）分词（jieba）->tf-idf（用来提取特征词，算出每个词的权重）->词向量（word2vec）用来计算相似性
 
 **3.训练模型：**
 
-**协同过滤：kNN，矩阵分解**
+协同过滤：kNN，矩阵分解
 
 **4.评估，模型上线**
 
@@ -132,7 +134,7 @@ Data(数据)->Features(特征)->ML Algorithm(机器学习算法)->Prediction Out
 
     -   数据分类
         -   实数值(物品评分情况)
-        -   布尔值(用户的行为 是否点击 是否收藏)
+        -   布尔值(用户的行为如，是否点击 是否收藏，1010这样的布尔值)
     -   欧氏距离，衡量这两个点之间的距离，不适用于布尔向量之间
         E(p,q)=∑i=1n(pi−qi)2
          欧氏距离的值非负, 最大值正无穷, 通常计算相似度的结果希望是[-1,1]或[0,1]之间,一般可以使用如下转化公式:11+E(p,q)
@@ -208,7 +210,7 @@ Data(数据)->Features(特征)->ML Algorithm(机器学习算法)->Prediction Out
 
 # 基于内存的协同过滤
 
-## 1.协同过滤推荐算法代码示例
+## 1.协同过滤推荐算法代码
 
 构建数据集：
 
@@ -474,10 +476,12 @@ Item E  0.9695 -0.4781 -0.4276  0.5817  1.0000
 
 关于评分预测的方法也有比较多的方案，下面介绍一种效果比较好的方案，**利用用户相似度和相似用户的评价来加权平均**，该方案考虑了**用户本身的评分评分以及近邻用户的加权平均相似度打分**来进行预测：pred(u,i)=r^ui=∑v∈Usim(u,v)∗rvi∑v∈U|sim(u,v)|
 
+用户u和v之间的相似度乘上消费过这个商品的用户v对此商品的评分（皮尔逊相关系数）
+
 ![image-20220312214949203](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041809131.png)
 
 我们要预测用户1对物品E的评分，那么可以根据与用户1最近邻的用户2和用户3进行预测，计算如下：
-pred(u1,i5)=0.85∗3+0.71∗50.85+0.71=3.91
+pred(u1,i5)=0.85∗3+0.71∗50.85+0.71=3.91（用户2和3对该物品的评分分别是3和5）
 
 ![image-20220312215004010](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041809923.png)
 
@@ -495,7 +499,7 @@ pred(u1,i5)=0.97∗5+0.58∗40.97+0.58=4.63
 
 ![image-20220312215537005](https://cdn.jsdelivr.net/gh/p0lar1star/blog-img/202204041809362.png)
 
-对比可见，User-Based CF预测评分和Item-Based CF的评分结果也是存在差异的，因为严格意义上他们其实应当属于两种不同的推荐算法，各自在不同的领域不同场景下，都会比另一种的效果更佳，但具体哪一种更佳，必须经过合理的效果评估，因此在实现推荐系统时这两种算法往往都是需要去实现的，然后对产生的推荐效果进行评估分析选出更优方案。
+对比可见，User-Based CF预测评分和Item-Based CF的评分结果也是存在差异的，因为严格意义上他们其实应当属于两种不同的推荐算法，各自在不同的领域不同场景下，都会比另一种的效果更佳，但**具体哪一种更佳，必须经过合理的效果评估**，因此在实现推荐系统时这两种算法往往都是需要去实现的，然后对产生的推荐效果进行评估分析选出更优方案。
 
 ### 总结
 
